# LukOilNeftohim-Chess-

./: .gitignore  CMakeLists.txt  LICENSE  README.md  board_tests  chess  chess_engine  engine_tests  test_helper.txt  uci_tests
apps/: main.cpp
include/chess/core/: board.hpp  move.hpp  piece.hpp  rules.hpp
include/chess/engine/: eval.hpp  search.hpp  uci.hpp
include/chess/parser/: fen.hpp  png.hpp  san.hpp
include/chess/storage/: file_reader.hpp  file_writer.hpp  storage.hpp
include/chess/ui/: input.hpp  render.hpp
src/core/: board.cpp  move.cpp  piece.cpp  rules.cpp
src/engine/: eval.cpp  search.cpp  uci.cpp
src/parser/: fen.cpp  png.cpp  san.cpp
src/storage/: file_reader.cpp  file_writer.cpp  storage.cpp  storage.hpp
src/ui/: input.cpp  render.cpp
tests/core/: engine_test.cpp
tests/engine/: engine_test.cpp  uci_test.cpp
tests/storage/: storage_test.cpp
